plugins {
    id 'java'
    id 'io.quarkus'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'io.quarkus:quarkus-cache'
    implementation 'io.quarkus:quarkus-security'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-mongodb-client'
    implementation 'io.quarkus:quarkus-jackson'
    implementation 'io.quarkus:quarkus-container-image-podman'
    implementation enforcedPlatform("${project.getProperty('quarkusPlatformGroupId')}:${project.getProperty('quarkusPlatformArtifactId')}:${project.getProperty('quarkusPlatformVersion')}")
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-scheduler'
    implementation 'io.quarkus:quarkus-mailer'
    implementation 'io.jenetics:jpx:3.2.0'
    testImplementation 'io.quarkus:quarkus-junit'
    testImplementation 'io.rest-assured:rest-assured'
}

group = 'de.fw'
version = '0.3'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(Test) {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}
